# supervisor-telegram

./: .dockerignore  .env.example  .env.prod.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_TRACKING.md  README.md  docker-compose.dev.yaml  docker-compose.mcp.dev.yml  docker-compose.mcp.prod.yml  docker-compose.override.yml  docker-compose.yaml  nginx.prod-db.conf  nginx.prod.conf  pyproject.toml
.github/workflows/: branch-test.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 0ad1ead50001_add_ad_leads.py  0ad1ead50002_add_ad_lead_ping_message.py  0ad1ead50003_add_chat_resource_status.py  176a68e93830_add_image_url_to_channel_posts.py  1f95dc964397_add_indexes_to_messages_agent_decisions_.py  21c84750b5db_add_review_album_message_ids_to_channel_.py  36dc14a33db3_add_scheduled_post_fields_and_publish_.py  3e8dba58c88d_add_image_candidates_and_image_phashes_.py  696e6c5e098a_add_channel_post_review_columns.py  7323f6948691_add_channels_table_fix_source_uniqueness.py  930d376edcfd_add_footer_template_to_channels.py  a1b2c3d4e5f6_add_agent_tables.py  a2b3c4d5e6f7_composite_index_chat_member_snapshots.py  a3b1c2d4e5f6_add_image_urls_json_to_channel_posts.py  a8b9c0d1e2f3_add_chat_photo_and_sync.py  b1c2d3e4f5a6_add_chat_parent.py  b2c3d4e5f6a7_add_admin_magic_links.py  b8c2d4e6f7a9_add_embedding_to_channel_posts.py  c2d3e4f5a6b7_add_spam_pings.py  c3d4e5f6a7b8_add_sponsored_ad_requests.py  c4d5e6f7a8b9_channel_telegram_id_to_bigint.py  c663f6310e6f_add_critic_enabled_and_pre_critic_text.py  d3e4f5a6b7c8_add_agent_conversations.py  d4e5f6a7b8c9_add_chat_ad_enabled.py  d5e6f7a8b9c0_add_reply_chain_message_ids.py  e3cd4fed09e2_add_channel_sources_and_channel_posts_.py  e4f5a6b7c8d9_add_admin_sessions.py  f6a7b8c9d0e1_add_chat_member_snapshots.py  f7a8b9c0d1e2_add_cost_events.py
app/agent/: __init__.py  core.py  escalation.py  memory.py  prompts.py  schemas.py  tool_trace.py
app/assistant/: agent.py  bot.py  config.py
app/channel/: brave_search.py  channel_repo.py  config.py  cost_tracker.py  critic.py  discovery.py  embeddings.py  exceptions.py  feedback.py  generator.py  images.py  llm_client.py  orchestrator.py  publisher.py  schedule_manager.py  semantic_dedup.py  source_discovery.py  source_manager.py  sources.py  topic_splitter.py  workflow.py
app/core/: bot_factory.py  config.py  container.py  enums.py  logging.py  markdown.py  repository_factory.py  service_registry.py  text.py  time.py  tool_trace.py  web_admin_auth.py
app/db/: magic_link_store.py  models.py
app/domain/: agent.py  agent_models.py  entities.py  exceptions.py  models.py  repositories.py  value_objects.py
app/infrastructure/: ngrok_helper.py  tunnel_helper.py
app/mcp_server/: main.py
app/moderation/: ad_detector.py  ad_detector_service.py  agent.py  blacklist.py  escalation.py  history_service.py  memory.py  spam_service.py  user_service.py
app/sponsored_ads/: __init__.py  cleanup.py  decisions.py  domain.py  leads.py  outreach.py  rate_card.py  review.py  service.py  text.py
app/telethon/: telethon_client.py
app/webapi/: __init__.py  __main__.py  deps.py  main.py  schemas.py  snapshot_loop.py
docker/: Caddyfile
docs/: ARCHITECTURE_PLAN.md  README.md  architecture.md  channel-agent-flow.mmd  content-style-guide.md  cvut-chat-deep-analysis.md  ddd-refactor.patch  konnekt-strategy.md
docs/archive/: channel-analysis-report.md
docs/deployment/: README.md  production-credentials.md
docs/domain/: README.md  admin-web.md  content-pipeline.md  moderation.md  sponsored-ads.md  telegram-identities.md
docs/product/: README.md  overview.md  sponsored-ads.md
docs/project/: README.md  learning.md
docs/research/: agent_frameworks_developer_opinions.md  agent_memory_systems.md  content_automation_tools.md  lightweight_agent_patterns.md  multi_agent_architectures.md  observability_and_costs.md  telegram_ecosystem.md
docs/reviews/: architecture_review.md  channel-agent-review.md  security_review.md
docs/testing/: README.md
scripts/: add_rss_sources.py  audit_prod_env.sh  backfill_embeddings.py  cloudflared-wrapper.sh  create_konnekt_channel.py  entrypoint.sh  get-ngrok-url.sh  setup_review_channel.py  smoke_web_origin.py  telethon_auth.py  test_review_flow.py  test_single_post.py  update-webapp-url.sh  wait_for_postgres.sh
tests/: README.md  conftest.py  conftest_pg.py  factories.py  fake_telegram.py  telegram_helpers.py
tests/api/: test_agent_endpoints.py  test_auth.py  test_chat_endpoints.py
tests/e2e/: conftest.py  test_agent_moderation.py  test_channel_review.py  test_fake_tg_album_endpoints.py  test_review_album_e2e.py  test_review_image_tools_e2e.py
tests/fixtures/: __init__.py  images.py
tests/handlers/: test_admin_handlers.py  test_blacklist_handlers.py  test_blacklist_improvements.py  test_dependency_injection.py  test_events_handlers.py  test_moderation_handlers.py
tests/integration/: conftest.py  test_assistant_conversation.py  test_chat_repository.py  test_generator_with_critic.py  test_image_pipeline_build_pg.py  test_image_pipeline_dedup_pg.py  test_image_pipeline_full_flow_pg.py  test_pg_repository.py  test_review_for_update_pg.py  test_semantic_dedup_pg.py  test_user_repository.py  test_user_service_integration.py
tests/middleware/: test_blacklist_middleware.py
tests/performance/: test_repository_performance.py
tests/unit/: test_ad_detector.py  test_ad_lead_model.py  test_ad_review_handler.py  test_admin_middleware.py  test_admin_sessions.py  test_api.py  test_api_key_manager.py  test_application_services.py  test_assistant.py  test_assistant_set_channel_critic.py  test_bot_factory.py  test_buttons.py  test_channel_agent.py  test_channel_agent_v2.py  test_channel_config_image.py  test_channel_exceptions.py  test_channel_model.py  test_channel_post_album_ids.py  test_channel_workflow.py  (+69 more)
webapp/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
webui/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
(+252 files in other folders)
